--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,13 @@
   background-color: #6f5499;
 }
 
+.header {
+    padding: 40px 0 70px;
+    background: url("../bg.png") no-repeat;
+    background-size: 100%;
+    box-sizing: border-box;
+}
+
 .main-header h1 {
   margin-top: 0;
   color: #fff;
